editors/tree-sitter-rasmalai/grammar.js
    source_file: $ => repeat($._declaration_or_statement),

    expression: $ => exprAlternatives($, true),

    _condition: $ => exprAlternatives($, false),

    _block_or_statement: $ => choice(
      $.block,
      $.statement,
      $.expression_statement,
    ),

    ternary_expression: $ => prec.right(1, seq(
      field('condition', $.expression),
      '?',
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    nullish_expression: $ => prec.left(2, seq($.expression, '??', $.expression)),

    bitwise_or_expression: $ => prec.left(5, seq($.expression, '|', $.expression)),

    bitwise_xor_expression: $ => prec.left(6, seq($.expression, '^', $.expression)),

    bitwise_and_expression: $ => prec.left(7, seq($.expression, '&', $.expression)),

    is_expression: $ => prec.left(9, seq($.expression, 'is', $.type)),

    relational_expression: $ => prec.left(9, seq($.expression, choice('<', '<=', '>', '>='), $.expression)),

    shift_expression: $ => prec.left(10, seq($.expression, choice('<<', '>>', '>>>'), $.expression)),

    additive_expression: $ => prec.left(12, seq($.expression, choice('+', '-'), $.expression)),

    multiplicative_expression: $ => prec.left(13, seq($.expression, choice('*', '/', '%'), $.expression)),

    cast_expression: $ => prec.left(14, seq($.expression, 'as', $.type)),

    unary_expression: $ => prec(15, seq(choice('-', '!', '~', '&', '*', 'await'), $.expression)),

    prefix_update_expression: $ => prec.right(16, seq(choice('++', '--'), $.expression)),

    postfix_update_expression: $ => prec.left(16, seq($.expression, choice('++', '--'))),

    call_expression: $ => choice(
      seq(
        field('function', choice($.identifier, $.member_expression, $.implicit_member_expression, $.call_expression, $.index_expression)),
        field('type_arguments', $.turbofish),
        $.argument_list,
      ),
      prec(17, seq(
        field('function', choice($.identifier, $.member_expression, $.implicit_member_expression, $.call_expression, $.index_expression)),
        $.argument_list,
      )),
    ),

    new_expression: $ => prec(17, seq(
      'new',
      field('target', seq($.identifier, repeat(seq('.', $.identifier)))),
      optional(field('type_arguments', $.turbofish)),
      $.argument_list,
    )),

    optional_call_expression: $ => prec(18, seq(
      field('object', $.expression),
      '?.',
      field('member', $.identifier),
      $.argument_list,
    )),

    optional_chain_expression: $ => prec(17, seq(
      field('object', $.expression),
      '?.',
      field('member', $.identifier),
    )),

    closure_expression: $ => prec(9, seq(
      'fn',
      'decay',
      $.parameter_list,
      optional(seq(':', $.type)),
      optional('throws'),
      field('body', $.block),
    )),

    arrow_function: $ => prec.right(0, seq(
      optional('async'),
      choice(
        field('parameter', $.identifier),
        field('parameters', $.parameter_list)
      ),
      optional(seq(':', field('return_type', $.type))),
      '=>',
      field('body', choice($.block, $.expression))
    )),

    _declaration_or_statement: $ => choice(
      $._declaration,
      $.statement,
      $.expression_statement,
    ),

    _exportable_declaration: $ => choice(
      $.function_declaration,
      $.class_declaration,
      $.struct_declaration,
      $.record_declaration,
      $.trait_declaration,
      $.interface_declaration,
      $.extension_declaration,
      $.enum_declaration,
      $.variable_declaration,
    ),

    function_declaration: $ => seq(
      optional(choice('pub', 'public')),
      optional(choice('async', 'unsafe')),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      $.parameter_list,
      optional(seq(':', $.type)),
      optional('throws'),
      field('body', $.block),
    ),

    class_declaration: $ => seq(
      optional(choice('pub', 'public')),
      'class',
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq('extends', field('superclass', $.type))),
      optional(seq('with', commaSep1($.type))),
      optional(seq(':', commaSep1($.type))),
      $.class_body,
    ),

    struct_declaration: $ => seq(
      optional(choice('pub', 'public')),
      'struct',
      field('name', $.identifier),
      optional($.type_parameters),
      $.class_body,
    ),

    record_declaration: $ => seq(
      optional(choice('pub', 'public')),
      'record',
      field('name', $.identifier),
      optional($.type_parameters),
      $.parameter_list,
    ),

    interface_declaration: $ => seq(
      optional(choice('pub', 'public')),
      'interface',
      field('name', $.identifier),
      optional($.type_parameters),
      $.interface_body,
    ),

    interface_body: $ => seq('{', repeat($.function_signature), '}'),

    extension_declaration: $ => seq(
      optional(choice('pub', 'public')),
      'extension',
      field('target', $.type),
      $.extension_body,
    ),

    extension_body: $ => seq('{', repeat($._class_member), '}'),

    variable_declaration: $ => seq(
      optional(choice('pub', 'public', 'private')),
      optional('static'),
      choice('let', 'const'),
      field('name', $.identifier),
      optional(seq(':', $.type)),
      optional(seq('=', $.expression)),
      optional(';'),
    ),

    destructure_tuple_statement: $ => seq(
      optional('static'),
      choice('let', 'const'),
      '(',
      commaSep1($.identifier),
      ')',
      optional(seq(':', $.type)),
      '=',
      field('value', $.expression),
      optional(';'),
    ),

    destructure_array_statement: $ => seq(
      optional('static'),
      choice('let', 'const'),
      '[',
      commaSep(choice($.identifier, seq('...', $.identifier))),
      ']',
      '=',
      field('value', $.expression),
      optional(';'),
    ),

    destructure_record_statement: $ => seq(
      optional('static'),
      choice('let', 'const'),
      '{',
      commaSep(choice(
        $.identifier,
        seq(field('field', $.identifier), ':', field('local', $.identifier)),
        seq('...', $.identifier),
      )),
      '}',
      '=',
      field('value', $.expression),
      optional(';'),
    ),

    import_declaration: $ => seq(
      'import',
      choice(
        field('source', $.import_source),
        seq(
          field('names', choice(
            seq('*', optional(seq('as', field('namespace', $.identifier)))),
            seq('{', commaSep($.import_specifier), '}'),
            seq(
              field('default', $.identifier),
              optional(seq(',', '{', commaSep($.import_specifier), '}')),
            ),
          )),
          'from',
          field('source', $.import_source),
        ),
      ),
      optional(';'),
    ),

    export_declaration: $ => seq(
      'export',
      choice(
        seq('default', $._declaration_or_statement),
        seq(
          '*',
          optional(seq('as', field('alias', $.identifier))),
          'from',
          field('source', $.import_source),
          optional(';'),
        ),
        seq(
          '{',
          commaSep($.import_specifier),
          '}',
          optional(seq('from', field('source', $.import_source))),
          optional(';'),
        ),
        field('declaration', $._exportable_declaration),
      ),
    ),

    import_source: $ => choice(
      $.string_literal,
      seq('native', field('native_library', $.string_literal)),
    ),

    import_specifier: $ => choice(
      seq(
        optional('export'),
        field('name', $.identifier),
        optional(seq('as', field('alias', $.identifier))),
      ),
      seq(
        'fn',
        field('name', $.identifier),
        $.parameter_list,
        optional(seq(':', $.type)),
        optional(seq('as', field('alias', $.identifier))),
      ),
    ),

    type_parameters: $ => seq('<', commaSep1($.identifier), '>'),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      optional(choice('pub', 'public', 'private')),
      field('name', choice($.identifier, $.this_expression)),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('default', $.expression))),
    ),

    argument_list: $ => seq('(', commaSep($.argument), ')'),

    argument: $ => seq(
      optional(seq(field('name', $.identifier), ':')),
      $.expression,
    ),

    class_body: $ => seq('{', repeat($._class_member), '}'),

    _class_member: $ => choice(
      $.attribute,
      $.method_declaration,
      $.init_declaration,
      $.deinit_declaration,
      $.onreload_declaration,
      $.variable_declaration,
    ),

    function_signature: $ => seq(
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      $.parameter_list,
      optional(seq(':', $.type)),
      optional(';'),
    ),

    method_declaration: $ => seq(
      optional(choice('pub', 'public', 'private')),
      optional('static'),
      optional(choice('async', 'unsafe')),
      optional('fn'),
      field('name', $.identifier),
      optional($.type_parameters),
      $.parameter_list,
      optional(seq(':', $.type)),
      optional('throws'),
      field('body', $.block),
    ),

    init_declaration: $ => seq('init', $.parameter_list, $.block),

    block: $ => seq('{', repeat($._declaration_or_statement), '}'),

    primitive_type: $ => choice('Int', 'Float', 'Bool', 'Void', 'String'),

    generic_type: $ => seq($.identifier, '<', commaSep1($.type), '>'),

    fn_type: $ => prec.right(2, seq(
      'fn',
      '(',
      commaSep($.type),
      ')',
      optional(seq(':', $.type)),
    )),

    tuple_type: $ => seq('(', $.type, repeat1(seq(',', $.type)), ')'),

    type: $ => choice(
      prec.right(6, seq(typeCore($), repeat1('?'))),
      typeCore($),
    ),

    record_field: $ => seq(
      field('name', choice($.identifier, $.string_literal)),
      ':',
      field('value', $.expression),
    ),

    record_literal: $ => prec(18, seq(
      '{',
      commaSep(choice($.record_field, $.spread_expression)),
      '}',
    )),

    spread_expression: $ => prec(18, seq('...', $.expression)),

    turbofish: $ => seq('<', commaSep1($.type), '>'),

    member_expression: $ => prec(17, seq(
      field('object', $.expression),
      '.',
      field('member', $.identifier),
    )),

    tuple_index_expression: $ => prec(17, seq(
      field('object', $.expression),
      '.',
      field('index', /[0-9]+/),
    )),

    index_expression: $ => prec(17, seq(
      field('object', $.expression),
      '[',
      field('index', $.expression),
      ']',
    )),

    tuple_expression: $ => prec(18, seq('(', $.expression, repeat1(seq(',', $.expression)), ')')),

    array_literal: $ => prec(18, seq('[', commaSep(choice($.spread_expression, $.expression)), ']')),

    implicit_member_expression: $ => prec(18, seq('.', field('member', $.identifier))),

    this_expression: $ => 'this',

    unsafe_block: $ => seq('unsafe', field('body', $.block)),

    switch_expression: $ => seq(
      'switch',
      field('value', $._condition),
      '{',
      repeat(choice($.switch_expression_arm, $.switch_expression_default)),
      '}',
    ),

    switch_expression_arm: $ => seq(
      'case',
      field('pattern', $.pattern),
      optional(seq('if', field('guard', $._condition))),
      ':',
      field('value', choice($.block, $.expression)),
      optional(choice(',', ';')),
    ),

    switch_expression_default: $ => seq(
      'default',
      ':',
      field('value', choice($.block, $.expression)),
      optional(choice(',', ';')),
    ),

    number_literal: $ => choice(
      /0x[0-9a-fA-F_]+/,
      /0b[01_]+/,
      /0o[0-7_]+/,
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9_]+)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9_]+/,
      /[0-9][0-9_]*/,
    ),

    string_literal: $ => choice(seq(
      '"',
      repeat(choice(token(prec(1, /[^"\\${]+/)), '$', /\\u\{[0-9a-fA-F]+\}/, /\\./, $.interpolation)),
      '"',
    )),

    interpolation: $ => seq(choice('${', '{'), $.expression, '}'),

    expression_statement: $ => seq($.expression, optional(';')),

    statement: $ => choice(
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.switch_statement,
      $.assign_statement,
      $.destructure_tuple_statement,
      $.destructure_array_statement,
      $.destructure_record_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.fallthrough_statement,
      $.pass_statement,
      $.defer_statement,
      $.unsafe_block,
      $.guard_statement,
      $.throw_statement,
      $.try_statement,
    ),

    if_statement: $ => prec.right(0, seq(
      'if',
      field('condition', $._condition),
      field('consequence', $._block_or_statement),
      optional(seq('else', field('alternative', $._block_or_statement))),
    )),

    while_statement: $ => seq(
      'while',
      field('condition', $._condition),
      field('body', $.block),
    ),

    do_statement: $ => seq(
      'do',
      field('body', $.block),
      'while',
      field('condition', $.expression),
      optional(';'),
    ),

    assign_statement: $ => seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '>>>=')),
      field('right', $.expression),
      optional(';'),
    ),

    for_statement: $ => choice(
      seq(
        'for',
        field('variable', $.identifier),
        'in',
        field('iterable', $._condition),
        field('body', $.block),
      ),
      seq(
        'for',
        '(',
        field('variable', commaSep1($.identifier)),
        ')',
        'in',
        field('iterable', $._condition),
        field('body', $.block),
      ),
      seq(
        'for',
        '(',
        field('variable', $.identifier),
        'in',
        field('iterable', $._condition),
        ')',
        field('body', $.block),
      ),
    ),

    switch_statement: $ => seq(
      'switch',
      field('value', $._condition),
      '{',
      repeat(choice($.case_clause, $.default_clause)),
      '}',
    ),

    case_clause: $ => seq(
      'case',
      field('pattern', $.pattern),
      optional(seq('if', field('guard', $._condition))),
      ':',
      repeat($._declaration_or_statement),
    ),

    default_clause: $ => seq('default', ':', repeat($._declaration_or_statement)),

    pattern: $ => choice(
      $.is_pattern,
      $.expression,
    ),

    return_statement: $ => seq('return', optional($.expression), optional(';')),

    fallthrough_statement: $ => seq('fallthrough', optional(';')),

    pass_statement: $ => seq('pass', optional(';')),

    defer_statement: $ => seq('defer', field('body', $._block_or_statement)),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
